# FlipBookMaker

./: app.py  flipbook_generator.spec  flipbook_installer.iss  launcher.py  pyproject.toml  routes.py  run_app.bat  setup.bat  utils.py
attached_assets/: Pasted--Specification-Offline-Flipbook-Generator-Personal-Use-Purpose-Create-an-offline-flipbook-fr-1749479361121_1749479361121.txt
static/css/: flipbook.css  style.css
static/js/: app.js  flipbook.js
templates/: base.html  flipbook_template.html  index.html
